<resources>
    <string name="app_name">menuemp</string>
    <string name="bem_vindo_ao">Bem-Vindo ao</string>
    <string name="e_mporium">E-mporium</string>
    <string name="todo">TODO</string>
    <string name="usu_rio_um_perfeito_conforto_para_que_se">usuário um perfeito conforto para que se</string>
    <string name="dark_gray">Dark Gray</string>
    <string name="aysoti_sohillsfort_slim_fit">Aysoti Sohillsfort Slim Fit</string>
    <string name="produtos">Produtos</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Clique aqui para criar uma conta</string>
    <string name="title_cadastro">Cadastre-se</string>
</resources>